organizing, crash fixes and new item: effect giver

--- a/src/main/resources/assets/mobbattle/lang/en_US.lang
+++ b/src/main/resources/assets/mobbattle/lang/en_US.lang
@@ -3,6 +3,7 @@ item.mob_kill.name=Mob Killer
 item.mob_heal.name=Mob Healer
 item.mob_group.name=Mob Enrager (Multi)
 item.mob_effect.name=Effect Remover
+item.mob_effect_give.name=Effect Giver
 item.mob_armor.name=Armor Editor
 item.mob_army.name=Mob Army
 item.mob_mount.name=Mob Mount
