--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
+Mob Battle 2.3.4
+================
+- Fix crash with MobArmy
+
 Mob Battle 2.3.3
 ================
 - Fix evoker team not applying to summoned vexes
