--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+Mob Battle 2.3.5
+================
+- Fix mods.toml version
+- Add support for spawneggs from TenshiLib
+
 Mob Battle 2.3.4
 ================
 - Port to 1.16
