--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ Mob Battle 2.3.5
 - Fix mods.toml version
 - Add support for spawneggs from TenshiLib
 - Add spawnegg color for missing mobs (iron/snow golem etc.)
+- Add support for mobs using the brain ai (piglins, hoglins etc.)
 
 Mob Battle 2.3.4
 ================
