--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
+Mob Battle 2.3.8
+================
+- Fix broken translation with multi enrager
+
 Mob Battle 2.3.7
 ================
 - Fix server crash
